--- a/src/components/TrajectorySection.astro
+++ b/src/components/TrajectorySection.astro
@@ -35,16 +35,17 @@ const EXPERIENCES = [
 <div class="flex w-full flex-col pt-(--header-h)">
     <div class="w-full flex justify-center items-center mb-10">
         <div class="flex w-full flex-col justify-center items-center">
-            <h1 class="text-center max-[235px]:text-2xl text-4xl dark:text-white text-black font-extrabold">
+            <h1 class="text-center max-[235px]:text-2xl text-4xl dark:selection:bg-white selection:bg-blue-700 dark:selection:text-blue-700 selection:text-white dark:text-white text-black font-extrabold">
                 {translate.trajectory.title}
             </h1>
-            <span class="dark:text-white/80 text-black/80 text-sm mt-2">
+            <span class="dark:text-white/80 text-black/80 text-sm mt-2 dark:selection:text-yellow-500 dark:selection:bg-transparent selection:text-blue-500 selection:bg-transparent">
                 {translate.work_experience}
             </span>
         </div>
     </div>
 
     <div class="relative w-full max-w-3xl mx-auto py-10">
+        {/* TIMELINE LINE */}
         <div
             class="max-[180px]:hidden absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 dark:bg-gray-700 bg-gray-300 rounded-full"
             id="timeline-line"
@@ -61,14 +62,17 @@ const EXPERIENCES = [
                         }`}
                     >
                         <div class="relative w-full md:w-1/2">
+                            {/*  Circle of experience position */}
                             <div
                                 class={`max-[180px]:hidden absolute ${
                                     index % 2 === 0
                                         ? "-left-4 md:left-auto -translate-x-0.75 md:translate-x-0 top-6 md:top-5 md:-right-2"
                                         : "-left-4 -translate-x-0.75 md:translate-x-0 top-6 md:top-5 md:-left-2"
                                 } w-4 h-4 dark:bg-blue-500 bg-blue-300 rounded-full border-4 dark:border-gray-900 border-gray-200 z-10 flex`}
+                                aria-label="Círculo de posicion de la experiencia"
                             />
 
+                            {/* EXPEERIENCE CARD */}
                             <div
                                 class={`bg-transparent dark:md:bg-gray-800 md:bg-gray-100 drop-shadow-md drop-shadow-black/10 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit max-[220px]:px-2
                                 ${
@@ -76,22 +80,25 @@ const EXPERIENCES = [
                                         ? "ml-0 mr-0 md:ml-auto md:mr-8"
                                         : "ml-0 mr-0 md:mr-auto md:ml-8"
                                 }`}
+                                aria-label="Carta de experiencia"
                             >
                                 <div class="w-full flex flex-col">
-                                    <h3 class="text-xl max-[170px]:text-base font-bold dark:text-white text-black/80">
+                                    <h3 class="text-xl max-[170px]:text-base font-bold dark:text-white text-black/80 selection:bg-yellow-500 selection:text-black" aria-label="Título de la carta de expriencia">
                                         {role}
                                     </h3>
-                                    <p class="dark:text-blue-400 text-blue-700 max-[170px]:text-[12px] font-semibold">
+                                    <p class="dark:text-blue-400 text-blue-700 max-[170px]:text-[12px] font-semibold" aria-label="Nombre de la compania de la carta de experiencia">
                                         {company}
                                     </p>
-                                    <p class="text-sm dark:text-gray-400 text-gray-500">
+                                    <p class="text-sm dark:text-gray-400 text-gray-500" aria-label="Fecha inicio - Fecha fin de la carta de experiencia">
                                         {start} – {end}
                                     </p>
-                                    <p class="dark:text-gray-300 text-gray-800 mt-2 text-ellipsis">{description}</p>
+                                    <p class="dark:text-gray-300 text-gray-800 mt-2 text-ellipsis selection:bg-transparent dark:selection:text-blue-500 selection:text-blue-400" aria-label="Descripción de la carta de experiencia">
+                                        {description}
+                                    </p>
                                 </div>
                                 { interShip &&
-                                    <div class="w-full flex justify-start items-center mt-5">
-                                        <span class="dark:text-yellow-500 text-yellow-600 text-sm dark:bg-yellow-500/15 bg-yellow-300/20 dark:drop-shadow-none drop-shadow-md drop-shadow-yellow-300 max-[220px]:px-3 max-[220px]:text-[12px] px-2 py-1 md:py-0.5 rounded-full border dark:border-transparent border-yellow-300/60 max-[185px]:px-2 dark:max-[155px]:bg-transparent max-[155px]:bg-transparent max-[155px]:px-0">
+                                    <div class="w-full flex justify-start items-center mt-5" aria-label="Etiqueta de contrato de prácticas de la carta de experiencia">
+                                        <span class="dark:text-yellow-500 text-yellow-600 text-sm dark:bg-yellow-500/15 bg-yellow-300/20 dark:drop-shadow-none drop-shadow-md drop-shadow-yellow-300 max-[220px]:px-3 max-[220px]:text-[12px] px-2 py-1 md:py-0.5 rounded-full border dark:border-transparent border-yellow-300/60 max-[185px]:px-2 dark:max-[155px]:bg-transparent max-[155px]:bg-transparent max-[155px]:px-0 dark:selection:bg-blue-700 dark:selection:text-white selection:bg-blue-300 selection:text-white">
                                             {translate.trajectory.intership_message}
                                         </span>
                                     </div>
@@ -110,10 +117,10 @@ const EXPERIENCES = [
         const $timeline_line = document.getElementById('timeline-line');
         const $experiences_cards = document.querySelectorAll('.experience-card');
 
-        observar($timeline_line, 'animate-h-full');
+        observar($timeline_line, ['animate-h-full']);
         
         $experiences_cards.forEach((experienceCard) => {
-            observar(experienceCard, 'animate-fade-in');
+            observar(experienceCard, ['animate-fade-in', 'md:animate-zoom-in']);
         });
 
         function observar(element, className) {
@@ -121,7 +128,7 @@ const EXPERIENCES = [
                 entries.forEach((entry) => {
                     if(entry.isIntersecting) {
                         let element = entry.target;
-                        element.classList.add(className);
+                        element.classList.add(...className);
 
                         observer.unobserve(entry.target);
                     } 
