--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -40,7 +40,7 @@ const creador = translate.creator_name;
         </section>
 
         {/* PROJECTS SECTION */}
-        <section class="min-h-screen pt-10" data-section="projects" aria-label="Projects section">
+        <section class="pt-10 pb-20" data-section="projects" aria-label="Projects section">
             <Projects creador={creador} translate={translate} locale={locale} />
         </section>
 
